# aurora

./: .gitignore  README.md  dev.bat  laboratory.py  main.py  pyproject.toml  run.bat  stability.py  test.bat
aurora_seed_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: LAWS_OF_AURORA.md
engine/: version.py
engine/analysis/: hydrological_hotspot_analyzer.py  hydrological_hotspot_report.py  observatory_console.py  precipitation_report.py  water_passage_report.py  (+3 more)
tests/: test_ascii_renderer.py  test_atmosphere.py  test_atmospheric_moisture_visualizer.py  test_aurora_laboratory.py  test_clock_system.py  test_cloud_water_visualizer.py  test_condensation.py  test_drainage.py  test_drainage_map.py  test_evaporation.py  test_evaporation_transfer.py  test_event_bus.py  test_experiment_console.py  test_experiment_reproducibiliti.py  test_experiment_result_formatter.py  test_experiment_runner.py  test_geology_statistics.py  test_hydrological_hotspot_analyzer.py  test_infiltration.py  test_interpolation.py  test_laboratory_console.py  test_laboratory_result_formatter.py  test_moisture_transport.py  test_noise_generator.py  test_observatory_console.py  test_ocean.py  test_ocean_hydrology.py  test_ocean_initializer.py  test_ocean_mask.py  test_ocean_visualizer.py  test_planet_dna.py  test_planet_dna_factory.py  test_planet_report.py  test_planet_stability_experiment.py  test_planetary_water_conservation.py  test_precipitation.py  test_precipitation_conditions.py  test_precipitation_over_time.py  test_precipitation_report.py  test_precipitation_threshold.py  (+38 more)
(+84 files in other folders)
