[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"


[project]
name = "aurora-seed-engine"
version = "0.0.1"
description = "Aurora ecological simulation project powered by the SEED Engine."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []


[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10.0",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["engine*"]
exclude = [
    "tests*",
    "game*",
    "assets*",
    "docs*",
    "tools*",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"